--- a/index.html
+++ b/index.html
@@ -49,20 +49,72 @@
         </div>
       </nav>
 
-
-<section class="hero is-link is-fullheight-with-navbar">
-  <div class="hero-body">
       <div class="columns">
-    <p class="title">
-      Fullheight hero with navbar
-    </p>
-    <div class="columns is-mobile">
-        <div class="column is-4 is-offset-8">
-            <p></p>
-        </div>
-      </div>
-  </div>
-</section>
+        <div class="column is-two-thirds">
+            <section class="hero is-link is-fullheight-with-navbar">
+                <div class="hero-body">
+                  <p class="title">
+                    Fullheight hero with navbar
+                  </p>
+                </div>
+              </section>
+               
 
+        </div>
+        <div class="field">
+            <label class="label">From:</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="From:">
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">To:</label>
+            <div class="control">
+              <input class="input" type="Text" placeholder="To:">
+            </div>
+          </div>
+          <div class="select is-link">
+            <select>
+              <option>Number of Passangers</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+            </select>
+          </div>
+          <div class="select is-link">
+            <select>
+              <option>Ticket Class</option>
+              <option>Economy</option>
+              <option>First Class</option>
+              <option>Business Class</option>
+            </select>
+
+            
+          </div>
+        <div class="column">Auto</div>
+      </div> 
+
+  
+
+
+
+  
+      <!---
+
+    <h1 class="is-size-1"> Hello World</h1>
+    <h1 class="has-text-weight-bold"> Hello World</h1>
+    <h1 class="title has-text-centered"> Hello World</h1>
+    <h1 class="subtitle"> Hello World</h1>
+    <h1 class="subtitle px-4 mx-6"> Hello World</h1>
+    <h1 class="subtitle  py-6 my-2"> Hello World</h1>
+    <section class = 'section'> 
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel eaque dolorem illum assumenda doloremque temporibus, sit neque praesentium inventore recusandae nemo quas accusamus deleniti saepe alias veniam expedita autem odio!</p>
+    </section>
+
+    <div class="container">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eligendi!</p>
+    </div>
+    -->
 </body>
 </html>
