--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         </div>
         <div class="column ">
-          <figure class="image is ">
+          <figure class="image is-9by16 ">
             <img src="https://images.pexels.com/photos/5405596/pexels-photo-5405596.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
           </figure>
 
@@ -124,7 +124,7 @@
               <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
             </div>
             <p>
-              <strong>Quick Travel</strong> 
+              <strong>Quick Traveler</strong> 
               All rights reserved 2021 ©<a></a>. <br>
             </p>
           </div>
