--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
             
-              <img src="https://www.flaticon.com/svg/vstatic/svg/744/744502.svg?token=exp=1614130904~hmac=619343aa330bcf80a6f44cbbe8e472f7" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+              <img src="./public/assets/images/globe.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
               <h1 class="has-text-weight-bold"> Quick Travel</h1>
             </a>
 
@@ -105,7 +105,7 @@
         </div>
         <div class="column ">
           <figure class="image is-9by16 ">
-            <img src="https://images.pexels.com/photos/5405596/pexels-photo-5405596.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+            <img src="./public/assets/images/pexels-taryn-elliott-5405596.jpg">
           </figure>
 
         </div>
