--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </div>
       </nav>
 
-      <div class="columns">
-        <div class="column is-two-thirds">
-            <section class="hero is-link is-fullheight-with-navbar">
+      <div class="columns" style="flex-wrap: wrap; align-items: stretch;">
+        <div class="column is-two-thirds" >
+            <section class="hero is-link is-fullheight-with-navbar" style='height:100%'>
                 <div class="hero-body">
                   <div class="column is-4 ">
                     <p class="title">
@@ -103,8 +103,8 @@
                
 
         </div>
-        <div class="column ">
-          <figure class="image is-9by16 ">
+        <div class="column">
+          <figure class="image is-9by16" style='height:100%'>
             <img src="./public/assets/images/pexels-taryn-elliott-5405596.jpg">
           </figure>
 
