--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
             
-              <img src="./public/assets/images/globe.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-              <h1 class="has-text-weight-bold"> Quick Travel</h1>
+              <img src=".///assets/images/globe.png" alt="Bulma: a modern CSS framework based on Flexbox" width="28" height="28">
+              <h1 class="has-text-weight-bold">  Quick Travel</h1>
             </a>
 
             <div class="navbar-burger"  data-target="navbar-menu">
@@ -77,6 +77,7 @@
                           <option>2</option>
                           <option>3</option>
                           <option>4</option>
+                          <option>5</option>
                         </select>
                       </div>
                       <div class="select is-link">
@@ -105,7 +106,7 @@
         </div>
         <div class="column">
           <figure class="image is-9by16" style='height:100%'>
-            <img src="./public/assets/images/pexels-taryn-elliott-5405596.jpg">
+            <img src=".//assets/images/pexels-taryn-elliott-5405596.jpg">
           </figure>
 
         </div>
