--- a/api_test/index 2.html
+++ b/api_test/index 2.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <title>Flights</title>
+    <title>Document</title>
 </head>
-
 <body>
-  {{>navbar}}
-  {{{body}}}
-  {{>footer}}
+    
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js"></script>
 </html>
