search form typo

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                         </div>
                       </div> 
                       <div class="field">
-                        <label class="label has-text-light">Destination Airport::</label>
+                        <label class="label has-text-light">Destination Airport:</label>
                         <div class="control">
                           <input id="destination-input" Input class="input" type="Text" placeholder="To:">
                         </div>
