--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-end">
               <a class="navbar-item is-active" href="./index.html">Home</a>
               <a class="navbar-item" href="./members.html">Members</a>
-              <a class="navbar-item" href="./signin.html">Log in</a>
+              <a class="navbar-item" href="./login.html">Log in</a>
          
             </div>
       
